--- a/www/index.html
+++ b/www/index.html
@@ -1,8 +1,44 @@
+
 <html>
-  <head>
-    <title>Default Project Content</title>
-  </head>
-  <body>
-    This is the default project content.
-  </body>
+<head>
+  <title></title>
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<style type="text/css">
+<!--
+.style3 {
+	font-size: large;
+	font-weight: bold;
+}
+.style4 {
+	color: #FF0000;
+	font-style: italic;
+	font-weight: bold;
+}
+-->
+</style>
+</head>
+<body>
+<p><span class="style3">W</span>elcome to the <strong>EFI-SCT Project</strong>. The purpose of this project is....</p>
+<h3>Working with th SCT </h3>
+<p>&lt;insert text here to explain how to work with the code &gt; </p>
+<h3>Project Participation</h3>
+<p>&lt;how do users participate in this project?&gt;
+<h3>Handy  Links</h3>
+		<p>The following links are provided for use by the general public:</p>
+		<ul>
+  <li><a href="#">Link 1 </a></li>
+  <li><a href="#">Link 2 </a></li>
+  <li> <a href="#">Link 3 </a></li>
+</ul>
+These links will work only if you are a registered user on TianoCore (click <a href="http://www.tianocore.org/servlets/Join">here</a> to register):
+  <ul>
+  <li><a href="http://efi-sct.tianocore.org/servlets/Scarab/curmodule/16/remcurreport/true/template/IssueList.vm/action/Search?nextTemplate=Index.vm&go=111&eventSubmit_doSelectquery=foo">Query of  Open and Active EFI-SCT Project Defects</a></li>
+  <li><a href="http://efi-sct.tianocore.org/servlets/ProjectMembershipRequest">Request for a Project Role (initial or promotion)</a> </li>
+</ul>
+<h3>Project Point of Contact</h3>
+<ul>
+  <li>Project Owner: Laurie Fleisher, Intel Corporation, <a href="mailto:%20%20laurie.fleisher@intel.com">laurie.fleisher@intel.com</a></li>
+</ul>
+<p>&nbsp;</p>
+</body>
 </html>
