--- a/www/index.html
+++ b/www/index.html
@@ -32,7 +32,7 @@
 </ul>
 These links will work only if you are a registered user on TianoCore (click <a href="http://www.tianocore.org/servlets/Join">here</a> to register):
   <ul>
-  <li><a href="http://efi-sct.tianocore.org/servlets/Scarab/curmodule/16/remcurreport/true/template/IssueList.vm/action/Search?nextTemplate=Index.vm&go=111&eventSubmit_doSelectquery=foo">Query of  Open and Active EFI-SCT Project Defects</a></li>
+  <li><a href="#">Query of  Open and Active EFI-SCT Project Defects</a></li>
   <li><a href="http://efi-sct.tianocore.org/servlets/ProjectMembershipRequest">Request for a Project Role (initial or promotion)</a> </li>
 </ul>
 <h3>Project Point of Contact</h3>
