Issue number:  sc1 Obtained from: Submitted by: Reviewed by: CVS: ---------------------------------------------------------------------- CVS: Issue number: CVS:   If this change addresses one or more issues, CVS:   then enter the issue number(s) here. CVS: Obtained from: CVS:   If this change has been taken from another system, CVS:   then name the system in this line, otherwise delete it. CVS: Submitted by: CVS:   If this code has been contributed to the project by someone else; i.e., CVS:   they sent us a patch or a set of diffs, then include their name/email CVS:   address here. If this is your work then delete this line. CVS: Reviewed by: CVS:   If we are doing pre-commit code reviews and someone else has CVS:   reviewed your changes, include their name(s) here. CVS:   If you have not had it reviewed then delete this line.
git-svn-id: http://svn.code.sf.net/p/efi-sct/code/trunk@11 96bca15c-f5f5-4175-a7e4-95b3122a4822

--- a/www/index.html
+++ b/www/index.html
@@ -9,30 +9,45 @@
 	font-size: large;
 	font-weight: bold;
 }
-.style4 {
-	color: #FF0000;
-	font-style: italic;
-	font-weight: bold;
-}
 -->
 </style>
 </head>
 <body>
-<p><span class="style3">W</span>elcome to the <strong>EFI-SCT Project</strong>. The purpose of this project is....</p>
-<h3>Working with th SCT </h3>
-<p>&lt;insert text here to explain how to work with the code &gt; </p>
+<p><span class="style3">W</span>elcome to the Self-Certification Tests (SCT) <strong>EFI-SCT Project </strong>. The EFI SCT is a toolset for platform firmware developers to validate EFI implementations on IA-32 as well as Itanium&reg; Architecture-based platforms for compliance with the <em>EFI 1.10 Specification</em>. The purpose is to ensure interoperability of different EFI implementations. The EFI SCT was released under the <a href="#">Eclipse license</a>.</p>
+<h3>Working with the SCT </h3>
+<p>The toolset features a Test Harness for executing built-in EFI Compliance Tests, as well as for integrating user-defined 
+
+
+tests that were developed using the EFI SCT open source code. The main objective to EFI SCT open source code is to provide standards for writing <em>EFI 1.10 Specification</em> compliant test cases, with shared output, reporting, and logging features. This allows test case writers to concentrate their efforts on test functionality.</p>
+<p> The EFI SCT requires the EFI Developer Kit (EDK) to use. To use the EFI SCT, users should install the EDK as well as the EFI Shell.&nbsp; Please refer the <a href="http://edk.tianocore.org/files/documents/16/105/file_105.dat?filename=Edk%20Getting%20Started%20Guide%2e%30%2e%34%31%2epdf">EDK Getting Started Guide (pdf) </a>to install the EDK and the <a href="http://efi-shell.tianocore.org/files/documents/56/140/EFI_Shell_getting_Started_GuideVer0_31.pdf">EFI Shell Getting Started Guide (pdf) </a>to install the EFI Shell. </p>
+<p>The following bullets provide information on how to download, build and use the EFI SCT.</p>
+<ul>
+  <li>Download snaphots of <a href="http://efi-sct.tianocore.org/servlets/ProjectDocumentList?folderID=48&expandFolder=48&folderID=47">development </a>or <a href="http://efi-sct.tianocore.org/servlets/ProjectDocumentList?folderID=49&expandFolder=49&folderID=48">official</a> releases of the EFI SCT. Simply click on the link and choose the latest development or official version to start the download process.</li>
+  <li> Download the <a href="http://efi-sct.tianocore.org/files/documents/54/147/file_147.dat?filename=EFI%20SCT%20Getting%20Started%20%2dlf%2epdf">EFI SCT Getting Started Guide (pdf) </a>for guiding on building and using the EFI SCT to develop. </li>
+</ul>
 <h3>Project Participation</h3>
-<p>&lt;how do users participate in this project?&gt;
+<p>The EFI-SCT project team is primarily comprised of Intel platform engineers, but the door is open to external engineers to join this blended team of professionals. Companies and individuals that may want to join the EFI-SCT development team include: 
+<ul>
+  <li>Independent Hardware Vendors (IHVs) </li>
+  <li>Independent BIOS Vendors (IBVs) </li>
+  <li>Original Equiment Manufacturers (OEMs) </li>
+  <li>Operating System Developers </li>
+  <li>Open BIOS Engineers </li>
+  <li>Educational Institutions </li>
+</ul>
+There is room for project membership in filing, screening, fixing and verifying bugs, as well as participating in the enhancement of the EFI SCT .  See the <a href="#">EFI-SCT Project Development Process</a> for an explanation of how this project functions and how new users can participate.
 <h3>Handy  Links</h3>
 		<p>The following links are provided for use by the general public:</p>
 		<ul>
-  <li><a href="#">Link 1 </a></li>
-  <li><a href="#">Link 2 </a></li>
-  <li> <a href="#">Link 3 </a></li>
-</ul>
+          <li> <a href="http://efi-sct.tianocore.org/servlets/ProjectDocumentList?folderID=48&expandFolder=48&folderID=0">Directory of EFI-SCT Source Code Snapshots (Development Versions) </a></li>
+          <li><a href="http://efi-sct.tianocore.org/servlets/ProjectDocumentList?folderID=49&expandFolder=49&folderID=47"> Directory of EFI-SCT Source Code Snapshots (Official Releases)</a></li>
+          <li><a href="http://community.tianocore.org/">Link to the TianoCore Community Project</a></li>
+          <li><a href="http://developer.intel.com/technology/efi/index.htm">Link to the Intel EFI 1.10 Specification (on Intel's Site) </a></li>
+          <li> <a href="http://efi-sct.tianocore.org/servlets/SummarizeList?listName=dev">Archives of the EFI-SCT &quot;Dev&quot; Mailing List </a></li>
+  </ul>
 These links will work only if you are a registered user on TianoCore (click <a href="http://www.tianocore.org/servlets/Join">here</a> to register):
   <ul>
-  <li><a href="#">Query of  Open and Active EFI-SCT Project Defects</a></li>
+  <li>Query of  Open and Active EFI-SCT Project Defects (link not active yet) </li>
   <li><a href="http://efi-sct.tianocore.org/servlets/ProjectMembershipRequest">Request for a Project Role (initial or promotion)</a> </li>
 </ul>
 <h3>Project Point of Contact</h3>
