Issue number:  sc1 Obtained from: Submitted by: Reviewed by: CVS: ---------------------------------------------------------------------- CVS: Issue number: CVS:   If this change addresses one or more issues, CVS:   then enter the issue number(s) here. CVS: Obtained from: CVS:   If this change has been taken from another system, CVS:   then name the system in this line, otherwise delete it. CVS: Submitted by: CVS:   If this code has been contributed to the project by someone else; i.e., CVS:   they sent us a patch or a set of diffs, then include their name/email CVS:   address here. If this is your work then delete this line. CVS: Reviewed by: CVS:   If we are doing pre-commit code reviews and someone else has CVS:   reviewed your changes, include their name(s) here. CVS:   If you have not had it reviewed then delete this line.
git-svn-id: http://svn.code.sf.net/p/efi-sct/code/trunk@13 96bca15c-f5f5-4175-a7e4-95b3122a4822

--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,7 @@
 </style>
 </head>
 <body>
-<p><span class="style3">W</span>elcome to the EFI Self-Certification Tests (EFI-SCT) Project on TianoCore. The EFI-SCT is a toolset for platform firmware developers to validate EFI implementations on IA-32 as well as Itanium&reg; Architecture-based platforms for compliance with the <em>EFI 1.10 Specification</em>. The purpose is to ensure interoperability of different EFI implementations. The EFI SCT was released under the <a href="#">Eclipse license</a>.</p>
+<p><span class="style3">W</span>elcome to the EFI Self-Certification Tests (EFI-SCT) Project on TianoCore. The EFI-SCT is a toolset for platform firmware developers to validate EFI implementations on IA-32 as well as Itanium&reg; Architecture-based platforms for compliance with the <em>EFI 1.10 Specification</em>. The purpose is to ensure interoperability of different EFI implementations. The EFI SCT was released under the <a href="http://www.tianocore.org/eclipselicense.html">Eclipse license</a>.</p>
 <h3>Working with the SCT </h3>
 <p>The toolset features a Test Harness for executing built-in EFI Compliance Tests, as well as for integrating user-defined 
 
