Issue number:  sc1 Obtained from: Submitted by: Reviewed by: CVS: ---------------------------------------------------------------------- CVS: Issue number: CVS:   If this change addresses one or more issues, CVS:   then enter the issue number(s) here. CVS: Obtained from: CVS:   If this change has been taken from another system, CVS:   then name the system in this line, otherwise delete it. CVS: Submitted by: CVS:   If this code has been contributed to the project by someone else; i.e., CVS:   they sent us a patch or a set of diffs, then include their name/email CVS:   address here. If this is your work then delete this line. CVS: Reviewed by: CVS:   If we are doing pre-commit code reviews and someone else has CVS:   reviewed your changes, include their name(s) here. CVS:   If you have not had it reviewed then delete this line.
git-svn-id: http://svn.code.sf.net/p/efi-sct/code/trunk@14 96bca15c-f5f5-4175-a7e4-95b3122a4822

--- a/www/index.html
+++ b/www/index.html
@@ -35,7 +35,7 @@ tests that were developed using the EFI-SCT open source code. The main objective
   <li>Open BIOS Engineers </li>
   <li>Educational Institutions </li>
 </ul>
-There is room for project membership in filing, screening, fixing and verifying bugs, as well as participating in the enhancement of the EFI-SCT .  See the <a href="#">EFI-SCT Project Development Process</a> for an explanation of how this project functions and how new users can participate.
+There is room for project membership in filing, screening, fixing and verifying bugs, as well as participating in the enhancement of the EFI-SCT .  See the <a href="http://efi-sct.tianocore.org/organization.html">EFI-SCT Project Development Process</a> for an explanation of how this project functions and how new users can participate.
 <h3>Handy  Links</h3>
 		<p>The following links are provided for use by the general public:</p>
 		<ul>
