Issue number:  sc1 Obtained from: Submitted by: Reviewed by: CVS: ---------------------------------------------------------------------- CVS: Issue number: CVS:   If this change addresses one or more issues, CVS:   then enter the issue number(s) here. CVS: Obtained from: CVS:   If this change has been taken from another system, CVS:   then name the system in this line, otherwise delete it. CVS: Submitted by: CVS:   If this code has been contributed to the project by someone else; i.e., CVS:   they sent us a patch or a set of diffs, then include their name/email CVS:   address here. If this is your work then delete this line. CVS: Reviewed by: CVS:   If we are doing pre-commit code reviews and someone else has CVS:   reviewed your changes, include their name(s) here. CVS:   If you have not had it reviewed then delete this line.
git-svn-id: http://svn.code.sf.net/p/efi-sct/code/trunk@16 96bca15c-f5f5-4175-a7e4-95b3122a4822

--- a/www/organization.html
+++ b/www/organization.html
@@ -7,7 +7,7 @@
 <p>The EFI-SCT codebase is an application that is built as part of the EDK project. At present there is no formalized team structure supporting each component or application of the EFI SCT, but as the membership increases project members will be naturally be attached to certain applications, performing roles such as defect screeners, fixers, code inspectors and QA analysts. We also envision new members bringing enhancements to the EFI SCT and perhaps creating new tests and applications. The fundamental role of project members will be of course to submit defects and enhancements. Guidance for how to submit issues can be found in the "How do I?" list on the EFI-SCT project homepage. Eventually new project members will contribute code changes. At a high level, the process for making changes to the code is to (a) download the tip of the sourcecode repository, (b) make your changes, then (c) submit your updates as a "diff" file to the module maintainer. The module maintainer will then review your submission for code quality and fix validation, then commit it into the repository. In this model, the only people with commit access are the module maintainers (and the project owner of course). This allows us to make sure that the codebase remains solid. Here's a high-level diagram of the life of an issue.</p>
 <table>
   <tr>
-    <td><p align="left"><strong>EDK ISSUE LIFECYCLE </strong></td>
+    <td><p align="left"><strong>EFI-SCT ISSUE LIFECYCLE </strong></td>
     <td width="20">&nbsp;</td>
     <td><p><img src="http://www.tianocore.org/images/HiLevelDefectProcess.gif" align="middle" > </p>
         <p></p>
@@ -49,13 +49,13 @@ href="http://efi-sct.tianocore.org/servlets/SummarizeList?listName=announce">See
 href="http://efi-sct.tianocore.org/servlets/ProjectDocumentList">here</A>. This area will undoubtedly expand and change, but here is what is available at present in the EFI-SCT document section: </p>
 <UL>
   <LI><STRONG>Developer HowTo's </STRONG>: documents intended to help developers get connected. <A 
-href="http://efi-sct.tianocore.org/servlets/ProjectDocumentList?folderID=1&expandFolder=1&folderID=0">Go there now</A>. 
+href="http://efi-sct.tianocore.org/servlets/ProjectDocumentList?folderID=57">Go there now</A>. 
   <LI><STRONG>Documents Under Review </STRONG>: self explanatory, and used in conjunction with the Dev mailing list to get documents finalized. <A 
-href="http://efi-sct.tianocore.org/servlets/ProjectDocumentList?folderID=38&expandFolder=38&folderID=39">Go there now</A>. 
+href="http://efi-sct.tianocore.org/servlets/ProjectDocumentList?folderID=44&expandFolder=44&folderID=0">Go there now</A>. 
   <LI><STRONG>Member Documents</STRONG>: this directory is intended for use by any EFI-SCT project member to house documents of their own. The only stipulation is that the documents be of value to the project. Just contact the Project Owner if you want your own directory created. <A 
-href="http://efi-sct.tianocore.org/servlets/ProjectDocumentList?folderID=55&expandFolder=55&folderID=55">Go there now</A>. 
+href="http://efi-sct.tianocore.org/servlets/ProjectDocumentList?folderID=55&expandFolder=55&folderID=57">Go there now</A>. 
   <LI><STRONG>Releases</STRONG>: this is where the "snapshots" of the EFI SCT code tip are located. There are two subdirectories: development and official. The EFI SCT Project Owner controls updates to this directory. <A 
-href="http://efi-sct.tianocore.org/servlets/ProjectDocumentList?folderID=4&expandFolder=4&folderID=36">Go there now</A>. </LI>
+href="http://efi-sct.tianocore.org/servlets/ProjectDocumentList?folderID=47&expandFolder=47&folderID=55">Go there now</A>. </LI>
 </UL>
 <br>
 
