Issue number:  sc1 Obtained from: Submitted by: Reviewed by: CVS: ---------------------------------------------------------------------- CVS: Issue number: CVS:   If this change addresses one or more issues, CVS:   then enter the issue number(s) here. CVS: Obtained from: CVS:   If this change has been taken from another system, CVS:   then name the system in this line, otherwise delete it. CVS: Submitted by: CVS:   If this code has been contributed to the project by someone else; i.e., CVS:   they sent us a patch or a set of diffs, then include their name/email CVS:   address here. If this is your work then delete this line. CVS: Reviewed by: CVS:   If we are doing pre-commit code reviews and someone else has CVS:   reviewed your changes, include their name(s) here. CVS:   If you have not had it reviewed then delete this line.
git-svn-id: http://svn.code.sf.net/p/efi-sct/code/trunk@17 96bca15c-f5f5-4175-a7e4-95b3122a4822

--- a/www/organization.html
+++ b/www/organization.html
@@ -20,7 +20,7 @@
 <p>The EFI-SCT project currently has two owners, <A 
 href="mailto:laurie.fleisher@intel.com">Laurie Fleisher</A> and <A 
 href="mailto:%20Carl.shi@intel.com">Carl Shi</A>, both of Intel. The project owners have at their disposal the ability to post a message to the group, add/change/delete roles and permissions, and to do project-level configuring of the Project Tracker application. The TianoCore community manager <A 
-href="mailto:%20akelly@collab.net">Andew Kelly</A> (who is employed by CollabNet and the site's expert on the underlying tool) is heavily involved in helping the EFI-SCT project owners with leveraging the CollabNet tool to the maximum extent possible. </p>
+href="mailto:%20akelly@collab.net">Andrew Kelly</A> (who is employed by CollabNet and the site's expert on the underlying tool) is heavily involved in helping the EFI-SCT project owners with leveraging the CollabNet tool to the maximum extent possible. </p>
 <p>The following sections explain in more detail the various features of the development environment and the roles that the EFI-SCT project supports. </p>
 <h4>Components of the Process</h4>
 <h5>Issue Tracking</h5>
