Updated to use the issuetrackerdiagram.html in the www project. [SC1]
git-svn-id: http://svn.code.sf.net/p/efi-sct/code/trunk@23 96bca15c-f5f5-4175-a7e4-95b3122a4822

--- a/www/organization.html
+++ b/www/organization.html
@@ -15,7 +15,7 @@
   </tr>
 </table>
 
-<p>For a detailed view of the issue resolution process click <a href="http://edk.tianocore.org/issuetrackerdiagram.html">here</a>).</p>
+<p>For a detailed view of the issue resolution process click <a href="http://www.tianocore.org/issuetrackerdiagram.html">here</a>).</p>
 <p>The mechanism for tracking bugs and getting code submissions moved through the process is the CollabNet Project Tracker (PT) application. PT is a robust, highly-configurable artifact tracking application that we have tailored to suit our needs. PT is integrated with the code respository (which is CVS), and so any commits or adds to the codebase must reference a defect or enhancement. In addition, the project has several mailing lists that capture updates to issues, commits to the CVS repository and general development discussions. Finally the project has a document repository where we keep documents that don't require versioning (this is where we keep the &quot;tip&quot; files that you'd be using to develop from). </p>
 <p>The EFI-SCT project currently has two owners, <A 
 href="mailto:laurie.fleisher@intel.com">Laurie Fleisher</A> and <A 
@@ -25,7 +25,7 @@ href="mailto:%20akelly@collab.net">Andrew Kelly</A> (who is employed by CollabNe
 <h4>Components of the Process</h4>
 <h5>Issue Tracking</h5>
 <p>Issue tracking is accomplished through the use of the Project Tracker application. For a graphical depiction of the issue resolution process click <A 
-href="http://edk.tianocore.org/issuetrackerdiagram.html">here</A>. On the left side of the EFI-SCT homepage you can find several "How do I?" links that spell out how to do various things like submit an issue, update an issue, etc. In addition, the system <A 
+href="http://www.tianocore.org/issuetrackerdiagram.html">here</A>. On the left side of the EFI-SCT homepage you can find several "How do I?" links that spell out how to do various things like submit an issue, update an issue, etc. In addition, the system <A 
 href="http://efi-sct.tianocore.org/nonav/servlets/HelpTOC">Help</A> has good information on how to use the Project Tracker application. As we mentioned above, this project has a fairly tight change management process, which is not to say its confusing, its just tight. Even so, its going to take some time to get up to speed on it, and we're here to assist. Eventually this community will support itself in guiding new members through the process, but until we get there, the EFI-SCT project owners, module maintainers and TianoCore Community Manager are committed to helping new members become comfortable with the process. Drop any one of these folks a line or just drop your question onto the "dev" mailing list for a wider distribution. </p>
 <h5>Code Versioning </h5>
 The EFI-SCT repository uses the Concurrent Versioning System (CVS). CVS is an open-source, time tested and intuitive system of controlling changes to the codebase. To use CVS you'll need a client, and instructions for getting connected to CVS are located on the <A 
