--- a/www/index.html
+++ b/www/index.html
@@ -1,20 +1,34 @@
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<META http-equiv="Content-Type" content="text/html; charset=utf-8">
 <p>
-<span class="style3">W</span>elcome to the EFI Self-Certification Tests (EFI-SCT) Project on TianoCore. 
+	<span class="style3">W</span>elcome to the EFI Self-Certification Tests 
+	(EFI-SCT) Project on the EFI and Framework Open Source Community Website.
 </p>
-
 <p>
-The EFI-SCT is no longer maintained on this web site and the UEFI SCT has been moved to the UEFI Forum at <a href="http://uefi.org/">html://www.uefi.org</a> members page. 
+	The EFI-SCT is no longer maintained on this web site and the UEFI SCT has been 
+	moved to the UEFI Forum at <a href="http://uefi.org/">html://www.uefi.org</a> members 
+	page.
 </p>
-
 <p>
-The UEFI SCT requires the EFI Developer Kit (EDK) and the EFI Shell to compile and build. Please refer the <a href="http://edk.tianocore.org/files/documents/16/105/file_105.dat?filename=Edk%20Getting%20Started%20Guide%2e%30%2e%34%31%2epdf">EDK Getting Started Guide (pdf) </a>to install the EDK and the <a href="http://efi-shell.tianocore.org/files/documents/56/140/EFI_Shell_getting_Started_GuideVer0_31.pdf">EFI Shell Getting Started Guide (pdf) </a>to install the EFI Shell. 
+	The UEFI SCT requires the EFI Developer Kit (EDK) and the EFI Shell to compile 
+	and build. Please refer the <a href="http://edk.tianocore.org/files/documents/16/105/file_105.dat?filename=Edk%20Getting%20Started%20Guide%2e%30%2e%34%31%2epdf">
+		EDK Getting Started Guide (pdf) </a>to install the EDK and the <a href="http://efi-shell.tianocore.org/files/documents/56/140/EFI_Shell_getting_Started_GuideVer0_31.pdf">
+		EFI Shell Getting Started Guide (pdf) </a>to install the EFI Shell.
 </p>
 <h3>Handy Links</h3>
 <p>
-The following links are provided for use by the general public: 
+	The following links are provided for use by the general public:
 </p>
-<ul><li><a href="http://community.tianocore.org/">Link to the TianoCore Community Project</a></li><li><a href="http://www.uefi.org">Link to the UEFI 2.1 Specification </a></li></ul><h3>Project Point of Contact</h3><ul><li>Project Owner: Laurie Jarlstrom, Intel Corporation, <a href="mailto:laurie.jarlstrom@intel.com">laurie.jarlstrom@intel.com</a></li></ul>
+<ul>
+	<li>
+		<a href="http://community.tianocore.org/">Link to the&nbsp;EFI and Framework Open 
+			Source Community Project</a><li><a href="http://www.uefi.org">Link to the UEFI 
+			2.1 Specification </a>
+	</li>
+</ul>
+<h3>Project Point of Contact</h3>
+<ul>
+	<li>
+		Project Owner: Laurie Jarlstrom, Intel Corporation, <a href="mailto:laurie.jarlstrom@intel.com">
+			laurie.jarlstrom@intel.com</a></li></ul>
 <p>
-&nbsp;
 </p>
